--- a/404.html
+++ b/404.html
@@ -2,4 +2,7 @@
 layout: default
 ---
 <h1>This page doesn't appear to exist</h1>
-<h3>{{site.url}}</h3>
+<h3><script>
+  document.write(document.URL);
+</script>
+</h3>
